# medgemma-sentinel

./: .env.example  .gitignore  NEXT_TASKS_CHECKLIST.md  README.md  REPORTING.md  app_longitudinal_analysis.py  app_mcp_cardiology.py  app_night_cardiology_sentinal.py  app_overall_report_generation.py  combined_demo_mcp_cardiology.py  generate_calibration_dataset.py  i-matrix-quantization_steps.md  launch.py  new_strucutre.py  pyproject.toml  requirements.txt  test_quantized_model.py
calibration_data/: README_CALIBRATION_DATASET.md  cardiology_calibration_imatrix.txt  medical_calibration_sota_v3.txt
calibration_output/: MEDGEMMA_INSTRUCTION_TUNED_FORMAT.md  QUICKSTART.md  calibration_dataset_log.json  medgemma_calibration_imatrix_formatted.txt
data/patients/: DEMO001_profile.json
data/reports/: rap1_night_DEMO001.md  rap1_night_MEDGEMMA_001.md  rap2_day_DEMO001.md
data/synthetic/: data_generator.py
demos/: README.md  README2.md
docs/architecture/: COMPLETE_PROJECT_ANALYSIS.md
docs/overview/: PROJECT_SUMMARY.md
examples/: demo_workflow.py
guardrails/: config.yml  input_guardrails.co  output_guardrails.co
mcp_architecture/: CARDIOLOGY_INTEGRATION.md  Readme.md  requirements.txt
mcp_architecture/src/: cardiology_sentinel.py  classification_sound_2.py  client_config.json  medical_mcp_client_2.py  medical_mcp_server.py  test_cardiology_tool.py
notebook/: data_preparation.ipynb  finetune_cardiology_hf.ipynb  scraping_physionet_hr.ipynb  test_medgemma_finetuned_cardiology.ipynb  testing_i_matrix_quantized_model.ipynb
scripts/: generate_medical_calibration_v2.py  launch_server.py
simulators/: vitals_sim.py
src/: README.md  __init__.py
src/examples/: demo_with_medgemma.py
src/guardrails/: __init__.py  prompts.yml
src/longitudinal_src/: README.md  longitudinal_analysis.py  requirements.txt
tests/: smoke_test.py  test_models.py  test_orchestration.py  verification_suite.py
(+128 files in other folders)
